--- a/index.html
+++ b/index.html
@@ -23,10 +23,63 @@
                 <h1><span class="material-symbols-outlined icon-title">eco</span>Caio Mendes<span class="sub-title">Portfólio</span></h1>
             </div>
         </section>
+        
+        <!--Avisos-->
         <section class="aviso">
             <p>Construção desse Portfólio é constante, então, fique atento as atualizações.</p>
             <p>No momento, estou adicionando aos poucos as informações.</p>
         </section>
+
+        <!--Sobre mim-->
+        <section class="sobre-mim">
+            <div class="title-aboutme">
+                <h2>Formação</h2>
+            </div>
+
+            <div class="formacao">
+                <ul>
+                    <li>Ensino Médio (<span class="negrito">Completo</span>)</li>
+                    <li>Gestão Empresarial (<span class="negrito">Cursando - Primeiro Semestre</span>)</li>
+                </ul>
+            </div>
+        </section>
+
+        <!--Projetos e Desenvolvimento-->
+        <section class="projetos-e-desenvolvimento">
+            <!--Projetos finalizados-->
+            <div class="projetos">
+                <div class="title-projects">
+                    <h2>Projetos finalizados</h2>
+                </div>
+                <div class="projetos-finalizados">
+                    <ul>
+                        <li>Portfólio <span class="link-edit"><a href="#">Acessar</a></span>
+                            <p>Este foi um pequeno projeto pessoal, tive como objetivo criar um 
+                                portfólio adequado para ser utilizado e entre outras ideias. 
+                                Porém não realizei mais atualizações, após finaliza-lo.</p>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+
+            <!--Projetos em andamento-->
+            <div class="desenvolvimento">
+                <div class="title-desen">
+                    <h2>Em desenvolvimento</h2>
+                </div>
+                <div class="desen-andamento">
+                    <ul>
+                        <li class="desen-primeiro">Seminário <span class="link-edit"><a href="#">Acessar</a></span>
+                            <p>Um site simples e intuitivo, focado em textos. 
+                                Objetivo deste projeto é ser simples e usa-ló para apresentar
+                                junto com minha equipa em nosso seminário, pois nosso tema é 
+                                <span>Ética na Sociedade Tecnologica</span>.</p>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </section>
+
     </main>
     
 </body>
