--- a/index.html
+++ b/index.html
@@ -39,21 +39,22 @@
             <div class="formacao">
                 <ul>
                     <li>Ensino Médio (<span class="negrito">Completo</span>)</li>
-                    <li>Gestão Empresarial (<span class="negrito">Cursando - Primeiro Semestre</span>)</li>
+                    <li>Faculdade de Gestão Empresarial (<span class="negrito">Cursando - Primeiro Semestre</span>)</li>
                 </ul>
             </div>
         </section>
 
-        <!--Projetos e Desenvolvimento-->
+        <!--Projetos pessoais em Desenvolvimento-->
         <section class="projetos-e-desenvolvimento">
+
             <!--Projetos finalizados-->
             <div class="projetos">
                 <div class="title-projects">
-                    <h2>Projetos finalizados</h2>
+                    <h2>Projetos pessoais</h2>
                 </div>
                 <div class="projetos-finalizados">
                     <ul>
-                        <li>Portfólio <span class="link-edit"><a href="#">Acessar</a></span>
+                        <li>Portfólio <span class="link-edit"><a href="https://caiounder.github.io/portfolio/" target="_blank">Acessar</a></span>
                             <p>Este foi um pequeno projeto pessoal, tive como objetivo criar um 
                                 portfólio adequado para ser utilizado e entre outras ideias. 
                                 Porém não realizei mais atualizações, após finaliza-lo.</p>
@@ -69,7 +70,7 @@
                 </div>
                 <div class="desen-andamento">
                     <ul>
-                        <li class="desen-primeiro">Seminário <span class="link-edit"><a href="#">Acessar</a></span>
+                        <li class="desen-primeiro">Seminário <span class="link-edit"><a href="#" target="_blank">Acessar</a></span>
                             <p>Um site simples e intuitivo, focado em textos. 
                                 Objetivo deste projeto é ser simples e usa-ló para apresentar
                                 junto com minha equipa em nosso seminário, pois nosso tema é 
@@ -78,9 +79,30 @@
                     </ul>
                 </div>
             </div>
+
+        </section>
+
+
+        <!--Exercícios ou Projetos para desenvolver melhor-->
+        <section class="exercicios">
+            <div class="title-exercicios">
+                <h2>Projetos</h2>
+            </div>
+            <div class="text-exercicios">
+                <p>Estes são alguns projetos usados para melhorar minhas habilidades. 
+                    Alguns dos temas desses projetos foram gerados por I.A para melhorar meu aprendizado. 
+                    Fora os temas gerados, os outros tipos são o padrão utilizado por todos para se desenvolver.</p>
+                <button>Acessar área de projetos</button>
+            </div>
         </section>
 
     </main>
+
+    <footer>
+        <div class="footer">
+            <p>Desenvolvido por <a href="https://github.com/caiomendes-doc" target="_blank">Caio Mendes</a></p>
+        </div>
+    </footer>
     
 </body>
 </html>
