--- a/index.html
+++ b/index.html
@@ -3,12 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Página Inicial</title>
-    <!--Estilo Base - Para todas páginas -->
+    <!--Título e Favicon-->
+    <title>Caio Mendes</title>
+    <link rel="shortcut icon" href="./assets/imgs/icons/favicon.ico" type="image/x-icon">
+    <!--CSS Base - Para todas páginas -->
     <link rel="stylesheet" href="./assets/style/default-style.css">
     <link rel="stylesheet" href="./assets/style/default-style-external.css">
     <!--CSS Interno-->
     <link rel="stylesheet" href="./assets/style/paginal-inicial/theme-default.css">
+    <link rel="stylesheet" href="./assets/style/style-mobile/theme-default-mobile.css">
     <!--Links Externos-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -20,13 +23,13 @@
     <main>
         <section class="nome-e-tipoProjeto">
             <div class="title-name">
-                <h1><span class="material-symbols-outlined icon-title">eco</span>Caio Mendes<span class="sub-title">Portfólio</span></h1>
+                <h1><span class="material-symbols-outlined icon-title">eco</span>Caio Mendes<span class="sub-title">Arquivos</span></h1>
             </div>
         </section>
         
         <!--Avisos-->
         <section class="aviso">
-            <p>Construção desse Portfólio é constante, então, fique atento as atualizações.</p>
+            <p>Construção desse projeto é constante, então, fique atento as atualizações.</p>
             <p>No momento, estou adicionando aos poucos as informações.</p>
         </section>
 
