--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                 </div>
                 <div class="desen-andamento">
                     <ul>
-                        <li class="desen-primeiro">Seminário <span class="link-edit"><a href="#" target="_blank">Acessar</a></span>
+                        <li class="desen-primeiro">Seminário <span class="link-edit"><a href="./pages/seminario.html" target="_blank">Acessar</a></span>
                             <p>Um site simples e intuitivo, focado em textos. 
                                 Objetivo deste projeto é ser simples e usa-ló para apresentar
                                 junto com minha equipa em nosso seminário, pois nosso tema é 
