--- a/pages/seminario.html
+++ b/pages/seminario.html
@@ -65,6 +65,8 @@
                     <li><a href="#">Falsas esperanças e perigos reais</a></li>
                     <li><a href="#">Pontos positivos e negativos</a></li>
                 </ul>
+
+                <button class="referencias"> Referências</button>
             </div>
         </section>
 
