--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                 <p>Estes são alguns projetos usados para melhorar minhas habilidades. 
                     Alguns dos temas desses projetos foram gerados por I.A para melhorar meu aprendizado. 
                     Fora os temas gerados, os outros tipos são o padrão utilizado por todos para se desenvolver.</p>
-                <button>Acessar área de projetos</button>
+                <button id="btn-projetos" onclick="areaProjetos()">Acessar área de projetos</button>
             </div>
         </section>
 
@@ -107,5 +107,7 @@
         </div>
     </footer>
     
+
+    <script src="./assets/js/index/btn-projetos.js"></script>
 </body>
 </html>
