--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         <!--Exercícios ou Projetos para desenvolver melhor-->
         <section class="exercicios">
             <div class="title-exercicios">
-                <h2>Projetos</h2>
+                <h2 class="style-h2">Projetos</h2>
             </div>
             <div class="text-exercicios">
                 <p>Estes são alguns projetos usados para melhorar minhas habilidades. 
