adicionado foto da chaiane

--- a/pages/seminario.html
+++ b/pages/seminario.html
@@ -89,7 +89,7 @@
                             <p>Leila</p>
                         </li>
                         <li>
-                            <img src="../assets/imgs/equipe/" alt="">
+                            <img src="../assets/imgs/equipe/chaiane.jpg" alt="">
                             <p>Chaiane</p>
                         </li>
                         <li>
