--- a/pages/seminario.html
+++ b/pages/seminario.html
@@ -56,16 +56,16 @@
             </div>
             <div class="lista-topicos">
                 <ul>
-                    <li><a href="#">Introdução</a></li>
-                    <li><a href="#">Ética</a></li>
-                    <li><a href="#">Ética Digital</a></li>
-                    <li><a href="#">Indústria cultural x cultura digital</a></li>
-                    <li><a href="#">Sociedade atual</a></li>
-                    <li><a href="#">Rastreando comportamentos e traços pessoais</a></li>
-                    <li><a href="#">Big Data</a></li>
-                    <li><a href="#">Segurança na Tecnologia</a></li>
-                    <li><a href="#">Falsas esperanças e perigos reais</a></li>
-                    <li><a href="#">Pontos positivos e negativos</a></li>
+                    <li><a href="#intro">Introdução</a></li>
+                    <li><a href="#etica">Ética</a></li>
+                    <li><a href="#etica-digital">Ética Digital</a></li>
+                    <li><a href="#industria">Indústria cultural x cultura digital</a></li>
+                    <li><a href="#sociedade">Sociedade atual</a></li>
+                    <li><a href="#rastreando">Rastreando comportamentos e traços pessoais</a></li>
+                    <li><a href="#bigdata">Big Data</a></li>
+                    <li><a href="#seguranca">Segurança na Tecnologia</a></li>
+                    <li><a href="#falsas">Falsas esperanças e perigos reais</a></li>
+                    <li><a href="#pontos">Pontos positivos e negativos</a></li>
                 </ul>
 
                 <button class="referencias" onclick="referenciaFinal()"> Referências</button>
@@ -133,7 +133,7 @@
             </div>
         </section>
 
-        <section class="intro padrao-edit">
+        <section id="intro" class="intro padrao-edit" style="display: none;">
             <h1>Introdução</h1>
             <p> &nbsp;&nbsp;&nbsp; A <span class="negrito">ética na sociedade tecnológica</span> é um dos muitos
                 temas considerados e importantes na era atual. Portanto, os progressos em 
@@ -146,7 +146,7 @@
             </p>
         </section>
 
-        <section class="etica padrao-edit">
+        <section id="etica" class="etica padrao-edit" style="display: none;">
             <h1>Ética</h1>
             <p>A palavra ética deriva do termo ethos, presente no idioma grego antigo. 
                 Ethos tem duas variantes: êthos (caráter) e éthos (costume). 
@@ -176,7 +176,7 @@
                 riscos trazidos pela tecnologia na sociedade.</p>
         </section>
 
-        <section class="etica-digital padrao-edit">
+        <section id="etica-digital" class="etica-digital padrao-edit" style="display: none;">
             <h1>Ética Digital</h1>
             <p>A ética digital é um campo da ética que trata das questões morais e comportamentais 
                 relacionadas ao uso da tecnologia e da internet. Com o avanço da tecnologia e a 
@@ -197,7 +197,7 @@
                 o que exige uma abordagem ética mais dinâmica e adaptável às novas tecnologias.</p>
         </section>
 
-        <section class="industria-culturalxcultura padrao-edit">
+        <section id="industria" class="industria-culturalxcultura padrao-edit" style="display: none;">
             <h1>Indústria cultural x cultura digital</h1>
             <p>A indústria cultural e a cultura digital representam duas formas distintas 
                 de produção e consumo, refletindo diferentes fases da 
@@ -230,7 +230,7 @@
                 independentes, ganhem popularidade e alcance global.</p>
         </section>
 
-        <section class="sociedade-atual padrao-edit">
+        <section id="sociedade" class="sociedade-atual padrao-edit" style="display: none;">
             <h1>Sociedade atual</h1>
             <p>A sociedade atual está imersa em um ambiente altamente tecnológico, 
                 onde os avanços científicos e a digitalização transformaram profundamente 
@@ -241,7 +241,7 @@
                 limites e das implicações de seu uso.</p>
         </section>
 
-        <section class="comportamentos padrao-edit">
+        <section id="rastreando" class="comportamentos padrao-edit" style="display: none;">
             <h1>Rastreando comportamentos</h1>
             <p>O rastreamento de comportamentos e traços pessoais na sociedade tecnológica 
                 tornou-se uma prática comum em diversas plataformas digitais, desde redes 
@@ -277,7 +277,7 @@
                 confiáveis".</p>
         </section>
 
-        <section class="big-data padrao-edit">
+        <section id="bigdata" class="big-data padrao-edit" style="display: none;">
             <h1>Big data</h1>
             <p>O Big Data refere-se ao enorme volume de dados gerados todos os dias, 
                 provenientes de uma vasta gama de fontes, como redes sociais, dispositivos 
@@ -313,7 +313,7 @@
                 que a tecnologia seja uma força positiva para o bem-estar coletivo.</p>
         </section>
 
-        <section class="seguranca padrao-edit">
+        <section id="seguranca" class="seguranca padrao-edit" style="display: none;">
             <h1>Segurança na Tecnologia</h1>
             <p>A segurança tecnológica é um dos principais pilares nos dias atuais, 
                 pois envolve a proteção de dados, sistemas e infraestruturas 
@@ -337,7 +337,7 @@
                 responsável.</p>
         </section>
 
-        <section class="falsas-esperanca padrao-edit">
+        <section id="falsas" class="falsas-esperanca padrao-edit" style="display: none;">
             <h1>Falsas esperanças e perigos reais</h1>
             <p>As falsas esperanças e os perigos reais estão cada vez mais entrelaçados, 
                 à medida que a tecnologia, muitas vezes, é vista como a solução mágica para 
@@ -360,7 +360,7 @@
                 das soluções mais complexas e necessárias.</p>
         </section>
 
-        <section class="pontos-positivo-e-negativos padrao-edit">
+        <section id="pontos" class="pontos-positivo-e-negativos padrao-edit" style="display: none;">
             <h1>Pontos positivos e negativos</h1>
             <p>A tecnologia, com suas promessas de progresso, tem a capacidade de transformar 
                 positivamente vários aspectos da sociedade.</p>
