--- a/pages/seminario.html
+++ b/pages/seminario.html
@@ -98,6 +98,12 @@
                             <p>Caio Mendes</p>
                         </li>
                     </ul>
+                    <div class="professor"> 
+                        <h3>Professor - Fatec</h3>
+                        <p>Professor <span class="negrito">Clovis Santa Fé Júnior</span></p>
+                        <img class="professor" src="../assets/imgs/equipe/clovis.jpg" alt="professor">
+                    
+                    </div>
                 </div>
 
                 <div class="ref-referencais">
