--- a/pages/seminario.html
+++ b/pages/seminario.html
@@ -37,7 +37,7 @@
                 <h2>Início</h2>
             </div>
             <div class="texto-informacoes">
-                <p>Mensagem! </p><br>
+                <p>Olá, pessoal! </p><br>
                 <p>Neste pequeno projeto contém informações sobre Ética na Sociedade Tecnológica.
                     As fontes utilizadas para desenvolvimento deste site estão disponíveis no final 
                     dos tópicos em <span class="negrito">referências</span>.
