--- a/index.html
+++ b/index.html
@@ -62,6 +62,12 @@
                                 portfólio adequado para ser utilizado e entre outras ideias. 
                                 Porém não realizei mais atualizações, após finaliza-lo.</p>
                         </li>
+                        <li class="desen-primeiro">Seminário <span class="link-edit"><a href="./pages/seminario.html" target="_blank">Acessar</a></span>
+                            <p>Um site simples e intuitivo, focado em textos. 
+                                Objetivo deste projeto é ser simples e usa-ló para apresentar
+                                junto com minha equipa em nosso seminário, pois nosso tema é 
+                                <span>Ética na Sociedade Tecnologica</span>.</p>
+                        </li>
                     </ul>
                 </div>
             </div>
@@ -73,12 +79,7 @@
                 </div>
                 <div class="desen-andamento">
                     <ul>
-                        <li class="desen-primeiro">Seminário <span class="link-edit"><a href="./pages/seminario.html" target="_blank">Acessar</a></span>
-                            <p>Um site simples e intuitivo, focado em textos. 
-                                Objetivo deste projeto é ser simples e usa-ló para apresentar
-                                junto com minha equipa em nosso seminário, pois nosso tema é 
-                                <span>Ética na Sociedade Tecnologica</span>.</p>
-                        </li>
+                        <li> Nenhum no momento...</li>
                     </ul>
                 </div>
             </div>
